# oa_target_extractor

./: CMakeLists.txt  README.md  package.xml
launch/: ros2_intel_realsense.launch.py
src/: oa_target_extractor_node.cpp
